调大字体，居中显示

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,14 +2,22 @@
 <head>
     <meta charset="utf-8">
     <title>模拟交易竞赛</title>
+    <style>
+        /* 将所有字体大小都设置为xx-large
+        所有内容都在页面居中显示
+        */
+        * {
+            font-size: xxx-large;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>模拟交易竞赛</h1>
-    <ul>
-        <li><h2><a href="quote.html">市场行情</a></h2></li>
-        <li><h2><a href="rank.html">收益排行</a></h2></li>
-        <li><h2><a href="my.html">我的账户</a></h2></li>
-        <li><h2><a href="trade.html">开始交易</a></h2></li>
+    <h2><a href="quote.html">市场行情</a></h2>
+    <h2><a href="rank.html">收益排行</a></h2>
+    <h2><a href="my.html">我的账户</a></h2>
+    <h2><a href="trade.html">开始交易</a></h2>
     </ul>
 </body>
 </html>
