font-size: xxxx-large;

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
         所有内容都在页面居中显示
         */
         * {
-            font-size: xxx-large;
+            font-size: xxxx-large;
             text-align: center;
         }
     </style>
