--- a/pages/index.html
+++ b/pages/index.html
@@ -2,15 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>模拟交易竞赛</title>
-    <style>
-        /* 将所有字体大小都设置为xx-large
-        所有内容都在页面居中显示
-        */
-        * {
-            font-size: xxxx-large;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="pages.css">
 </head>
 <body>
     <h1>模拟交易竞赛</h1>
