--- a/pages/quote.html
+++ b/pages/quote.html
@@ -20,6 +20,8 @@
 </head>
 <body>
     <h1>市场行情</h1>
+    <!-- 数据来源：binance -->
+    <p>数据来源：binance</p>
     <table>
         <tr>
             <th>市场名</th>
@@ -56,6 +58,19 @@
             <td>423456.789</td>
             <td>1234.567</td>
             <td>1234.567</td>
+        </tr>
+        <!-- 随机生成一组数据 -->
+        <tr>
+            <td>LTC/USDT</td>
+            <td>123.4567</td>
+            <td>2.31</td>
+            <td>1034567.89</td>
+            <td>123.4567</td>
+            <td>123.4567</td>
+            <td>4.21</td>
+            <td>423456.789</td>
+            <td>123.4567</td>
+            <td>123.4567</td>
         </tr>
     </table>
     <!-- 
