--- a/pages/index.html
+++ b/pages/index.html
@@ -1,15 +1,30 @@
+<!-- 
+    标题：
+    aitrad.in
+    两个大按钮：
+    binance，点击打开binance.html
+    bitfinex，点击打开bitfinex.html
+
+    使用bootstrap框架，兼容移动端
+ -->
+
 <html>
 <head>
     <meta charset="utf-8">
-    <title>模拟交易竞赛</title>
-    <link rel="stylesheet" href="pages.css">
+    <title></title>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h1>模拟交易竞赛</h1>
-    <h2><a href="quote.html">市场行情</a></h2>
-    <h2><a href="rank.html">收益排行</a></h2>
-    <h2><a href="my.html">我的账户</a></h2>
-    <h2><a href="trade.html">开始交易</a></h2>
-    </ul>
+    <div class="container overflow-hidden">
+        <div class="row gy-5">
+            <div class="col-md-12">
+                <h1>aitrad.in</h1>
+                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button">binance</a>
+                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button">bitfinex</a>
+            </div>  
+        </div>
+    </div>
 </body>
 </html>
