--- a/pages/index.html
+++ b/pages/index.html
@@ -18,9 +18,13 @@
 </head>
 <body>
     <div class="container overflow-hidden">
+        <div class="page-header">
+            <h1>交易
+                <small>aitrad.in</small>
+            </h1>
+        </div>
         <div class="row gy-5">
             <div class="col-md-12">
-                <h1>aitrad.in</h1>
                 <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button">binance</a>
                 <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button">bitfinex</a>
             </div>  
