--- a/pages/index.html
+++ b/pages/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="row gy-5">
             <div class="col-md-12">
-                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button">binance</a>
-                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button">bitfinex</a>
+                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button"><br>binance<br><br></a>
+                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button"><br>bitfinex<br><br></a>
             </div>  
         </div>
     </div>
