--- a/pages/index.html
+++ b/pages/index.html
@@ -24,10 +24,10 @@
             </h1>
         </div>
         <div class="row gy-5">
-            <div class="col-md-12">
-                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button"><br>binance<br><br></a>
-                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button"><br>bitfinex<br><br></a>
-            </div>  
+            <div class="col-sm-12">
+                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>binance</h1></a>
+                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>bitfinex</h1></a>
+            </div>
         </div>
     </div>
 </body>
